# croudqueue

./: .env.example  .flake8  .gitignore  .vercelignore  ARCHITECTURE.md  CODE_QUALITY_REFACTOR.md  DEMO_SCRIPT.md  Dockerfile.backend  Dockerfile.frontend  README.md  RELEASE_VERIFICATION.md  SECURITY.md  TESTING.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  requirements-dev.txt  requirements-runtime.txt  requirements.txt  task.md  vercel.json
backend/: alembic.ini  pyproject.toml  task.md
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_golden_flow_hardening.py  003_venue_scoped_keys.py  004_reconcile_model_constraints.py
backend/app/: __init__.py  config.py  database.py  logging.py  main.py  runtime.py
backend/app/api/: capabilities.py  health.py  runs.py  venue.py
backend/app/domain/: candidate.py  contracts.py  diagnostics.py  gir.py  guidance.py  scenario.py  simulation.py  snapshot.py  venue.py  workflow.py
backend/app/persistence/: types.py  unit_of_work.py
backend/app/persistence/models/: __init__.py  audit.py  run.py  venue.py
backend/app/services/: audit_service.py  golden_flow_service.py  integrity.py  outbox_dispatcher.py  reference_data_service.py  simulation_service.py  venue_service.py
backend/tests/: conftest.py  test_audit.py  test_code_quality_architecture.py  test_config.py  test_contracts.py  test_gemini_client.py  test_golden_flow.py  test_hardening.py  test_health.py  test_health_failures.py  test_models.py  test_outbox.py  test_read_model_contracts.py  test_runtime_infrastructure.py  test_venue.py
frontend/: index.html  (+6 more)
(+71 files in other folders)
