[project]
name = "crowdcue-backend"
version = "2.0.0"
description = "GenAI Stadium Guidance Preflight and Operational Decision Support Backend"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "networkx>=3.2.1",
    "numpy>=1.26.4",
    "redis>=5.0.3",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "aiosqlite>=0.20.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.9.0",
    "flake8>=7.0.0",
    "ruff>=0.3.0",
    "radon>=6.1",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[tool.ruff]
target-version = "py312"
line-length = 88
lint.select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF", "C90"]
lint.ignore = ["E501"]
lint.mccabe.max-complexity = 10
exclude = [".git", "__pycache__", "alembic", "migrations"]

